clean dependencies and useless resources

--- a/project/demo/src/main/res/values/strings.xml
+++ b/project/demo/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Demo</string>
+    <string name="app_name">传奇枭雄</string>
     <string name="launch_game">在线直接运行传奇枭雄</string>
     <string name="download">加载游戏资源……</string>
     <string name="install">加载游戏资源……</string>
